[package]
name = "ntex-h2"
version = "3.5.0"
license = "MIT OR Apache-2.0"
authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
description = "An HTTP/2 client and server"
documentation = "https://docs.rs/ntex-h2"
repository = "https://github.com/ntex-rs/ntex-h2"
readme = "README.md"
keywords = ["http", "async", "non-blocking"]
categories = ["asynchronous", "web-programming", "network-programming"]
exclude = ["fixtures/**", "util/**", "fuzz/**"]
edition = "2024"
rust-version = "1.88"

[features]
default = []

# unstable features
unstable = []

[package.metadata.docs.rs]
features = []

[dependencies]
ntex-bytes = "1.4"
ntex-codec = "1.1"
ntex-dispatcher = "3"
ntex-http = "1"
ntex-io = "3.5"
ntex-net = "3"
ntex-service = "4"
ntex-util = "3"

bitflags = "2"
foldhash = "0.2"
log = "0.4"
pin-project-lite = "0.2"
thiserror = "2"
nanorand = { version = "0.8", default-features = false, features = ["std", "wyrand", "entropy", "tls"] }

[dev-dependencies]
# Fuzzing
quickcheck = { version = "1.0.3", default-features = false }
rand = "0.9"

# HPACK fixtures
hex = "0.4.3"
walkdir = "2.3.2"
serde = "1"
serde_json = "1"

ntex = { version = "3.0.0-pre.14", features = ["openssl"] }
ntex-tls = { version = "3", features = ["openssl"] }
openssl = "0.10"

# Examples
env_logger = "0.11"

[patch.crates-io]
ntex-h2 = { path = "." }
