[package]
name = "ntex-h2"
version = "3.9.2"
license = "MIT OR Apache-2.0"
authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
description = "An HTTP/2 client and server"
documentation = "https://docs.rs/ntex-h2"
repository = "https://github.com/ntex-rs/ntex-h2"
readme = "README.md"
keywords = ["http", "async", "non-blocking"]
categories = ["asynchronous", "web-programming", "network-programming"]
exclude = ["fixtures/**", "util/**", "fuzz/**"]
edition = "2024"
rust-version = "1.88"

[features]
default = []

# unstable features
unstable = []

# log extra info
extra-trace = []

[package.metadata.docs.rs]
features = []

[dependencies]
ntex-bytes = "1.5.3"
ntex-codec = "1.1"
ntex-dispatcher = "3.1"
ntex-error = "2.1"
ntex-http = "1"
ntex-io = "3.9.2"
ntex-net = "3.9.1"
ntex-service = "4.6"
ntex-util = "3.5.1"
ntex-server = "3.9"

bitflags = "2"
foldhash = "0.2"
log = "0.4"
pin-project-lite = "0.2"
thiserror = "2"
nanorand = { version = "0.8", default-features = false, features = ["std", "wyrand", "entropy", "tls"] }

[dev-dependencies]
# Fuzzing
quickcheck = { version = "1.0.3", default-features = false }
rand = { version = "0.10", features = ["thread_rng"] }

# HPACK fixtures
hex = "0.4.3"
walkdir = "2.3.2"
serde = "1"
serde_json = "1"

ntex = { version = "3.7.1", features = ["openssl"] }
ntex-tls = { version = "3.4", features = ["openssl"] }
openssl = "0.10"

# Examples
env_logger = "0.11"

[patch.crates-io]
ntex-h2 = { path = "." }
