[package]
name = "h2-support"
version = "0.1.0"
authors = ["Carl Lerche <me@carllerche.com>"]
edition = "2018"

[dependencies]
ntex-h2 = { path = "../.." }
ntex-bytes = "0.1.15"
ntex-http = "0.1.0"
ntex-util = "0.1"

atty = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
tracing-tree = "0.2"
futures = { version = "0.3", default-features = false }
tokio = { version = "1", features = ["time"] }
tokio-test = "0.4"
